Training docs/Assignment8/Trial/src/objects/Line_Item__c.object
<CustomObject>
	<fields>
		<fullName>Invoice_Statement__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Invoice Statement</label>
		<referenceTo>Invoice_Statement__c</referenceTo>
		<relationshipLabel>Line Items</relationshipLabel>
		<relationshipName>Line_Items</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Merchandise_Name__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Merchandise Name</label>
		<referenceTo>Merchan__c</referenceTo>
		<relationshipLabel>Line Items</relationshipLabel>
		<relationshipName>Line_Items</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Unit_Price__c</fullName>
		<label>Unit Price</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Unit_Sold__c</fullName>
		<label>Unit Sold</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<label>Line Item</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Line Item Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Line Items</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>